--- a/docker/todo-app/front-end/src/pages/UserRegistration/style.css
+++ b/docker/todo-app/front-end/src/pages/UserRegistration/style.css
@@ -23,6 +23,7 @@ html, body {
   border-radius: 5px;
   width: 30%;
   padding: 30px;
+  box-shadow: 1px 5px 10px rgb(0, 0, 0);
 }
 
 .div-registration-failed-alert {
@@ -77,7 +78,7 @@ html, body {
 }
 
 .form-button-register {
-  background-color: rgb(0, 119, 182);
+  background-color: rgb(0, 102, 255);
   border: none;
   border-radius: 5px;
   width: 100%;
@@ -86,10 +87,26 @@ html, body {
   font-size: 14pt;
   cursor: pointer;
   margin-top: 20px;
+  box-shadow: 3px 5px 5px rgb(106, 106, 106);
 }
 
 .form-button-register:disabled {
   background-color: rgb(141, 183, 205);
   color: whitesmoke;
   cursor: auto;
+  box-shadow: 0.001px 0.001px 0.001px transparent;
+}
+
+.form-button-register:enabled:hover {
+  background-color: blue;
+}
+
+.div-link-login {
+  width: 100%;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.link-login:active, .link-login:hover {
+  color: rgb(56, 176, 0);
 }
