feat(/docker/todo-app/front-end/src/components/ItemList/styles.css): CSS da "scroll bar" implementado

--- a/docker/todo-app/front-end/src/components/ItemList/styles.css
+++ b/docker/todo-app/front-end/src/components/ItemList/styles.css
@@ -1,5 +1,16 @@
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: whitesmoke;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #024334;
+}
+
 .item-list {
+  height: 27vh;
+  overflow: auto;
   text-align: left;
-  width: 35%;
+  width: 50%;
   margin: 0;
 }
