--- a/docker/todo-app/front-end/src/pages/Tasks/style.css
+++ b/docker/todo-app/front-end/src/pages/Tasks/style.css
@@ -1,3 +1,7 @@
+.section-page-tasks {
+ height: 100vh;
+}
+
 .header-tasks {
   display: flex;
   align-items: center;
@@ -58,6 +62,10 @@
   justify-content: center;
   font-size: calc(5px + 2vmin);
   color: #D8F8EA;
+}
+
+.div-loading-tasks {
+  font-size: 20pt;
 }
 
 @keyframes logo-spin {
