refactor(/docker/todo-app/front-end/src/pages/UserLogin/style.css): Classe ".div-login-ok-alert" removida e classe ".div-login-failed-alert" renomeada para ".div-login-alert"

--- a/docker/todo-app/front-end/src/pages/UserLogin/style.css
+++ b/docker/todo-app/front-end/src/pages/UserLogin/style.css
@@ -43,14 +43,11 @@ html, body {
   box-shadow: 1px 5px 10px rgb(0, 0, 0);
 }
 
-.div-login-failed-alert {
+.div-login-alert {
   text-align: center;
   width: 100%;
   color: red;
-}
-
-.div-login-ok-alert {
-  display: none;
+  font-size: 14pt;
 }
 
 .form-div-fields {
